syntax = "proto3";

package user;
option go_package = "lib/core/generated/";

message User {
  string full_name = 1;
  string email = 2;
}

message CreateUserRequest {
  User  user = 1;
  string password = 2;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (User) {}
}